--- a/2. Ciência de Dados com Jupyter/2.0.Introducao.ipynb
+++ b/2. Ciência de Dados com Jupyter/2.0.Introducao.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "> **Gabriel P. Oliveira**\n",
     "- [Ciência de Dados Básica](./2.3.Ciencia.Dados.Basica.ipynb)\n",
-    "- [Visualização de Dados Básica](./2.4.Visualizacao.ipynb)"
+    "- [Visualização de Dados](./2.4.Visualizacao.ipynb)"
    ]
   }
  ],
@@ -49,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
